--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                     </div>
                     
                     <div class="instagram-wrapper">
+                        <p>hubungi kami :</p>
                         <a href="https://www.instagram.com/Emzhran26_" target="_blank" aria-label="Instagram">
                             <div class="instagram-icon">
                                 <i class="fab fa-instagram"></i>
